# Server-rat

Server/: README.md  go.mod  main.go
rust-rat/: DEPLOY.md  README.md
rust-rat/agent/: Cargo.toml
rust-rat/agent/src/: main.rs
rust-rat/client/: Cargo.toml
rust-rat/client/rust-rat/agent/: Cargo.toml
rust-rat/client/src/: main.rs
rust-rat/server/: Cargo.toml
rust-rat/server/src/: main.rs
